--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
+  horizontal_card_pager: ^1.1.1
+  scroll_snap_list: ^0.8.4
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/danse.jpg
+    - assets/smoke.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
